--- a/biforms/0f5aeaaa-c744-49b3-8b6b-210c48d54f15/measures.json
+++ b/biforms/0f5aeaaa-c744-49b3-8b6b-210c48d54f15/measures.json
@@ -1,26 +1,50 @@
 [
-  {
-    "qInfo": {
-      "qId": "szVdg",
-      "qType": "measure"
+    {
+        "qInfo": {
+            "qId": "szVdf",
+            "qType": "measure"
+        },
+        "qMeasure": {
+            "qLabel": "Deine Measue2",
+            "qDef": "Sum(City)",
+            "qGrouping": "N",
+            "qExpressions": [],
+            "qActiveExpression": 0,
+            "qNumFormat": {
+                "qType": "U",
+                "qnDec": 10,
+                "qUseThou": 0
+            },
+            "coloring": {}
+        },
+        "qMetaDef": {
+            "title": "Deine Measue2",
+            "description": "",
+            "tags": []
+        }
     },
-    "qMeasure": {
-      "qLabel": "Deine Measue",
-      "qDef": "count(City)",
-      "qGrouping": "N",
-      "qExpressions": [],
-      "qActiveExpression": 0,
-      "qNumFormat": {
-        "qType": "U",
-        "qnDec": 10,
-        "qUseThou": 0
-      },
-      "coloring": {}
-    },
-    "qMetaDef": {
-      "title": "Meine Measue",
-      "description": "",
-      "tags": []
+    {
+        "qInfo": {
+            "qId": "szVdg",
+            "qType": "measure"
+        },
+        "qMeasure": {
+            "qLabel": "Deine Measue",
+            "qDef": "count(City)",
+            "qGrouping": "N",
+            "qExpressions": [],
+            "qActiveExpression": 0,
+            "qNumFormat": {
+                "qType": "U",
+                "qnDec": 10,
+                "qUseThou": 0
+            },
+            "coloring": {}
+        },
+        "qMetaDef": {
+            "title": "Deine Measue",
+            "description": "",
+            "tags": []
+        }
     }
-  }
 ]
